force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__AddressVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AddressVerificationStatus__c</fullName>
    <label>Address Verification Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AddressVerificationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>