force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__IsCurrentAddress__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCurrentAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Address</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCurrentAddress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>