force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__IsPrimaryAddress__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Address</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryAddress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>