force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__PartyProfileAddressType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileAddressType__c</fullName>
    <label>Party Profile Address Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileAddressType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>