force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__PartyProfileId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileId__c</fullName>
    <label>Party Profile</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>