force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__rel_1731658775092_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658775092_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyProfileAddress_AddressId_map_Ad_rel</label>
    <referenceTo>ssot__Address__dlm</referenceTo>
    <relationshipLabel>PartyProfileAddress_AddressId_map_Ad_rel</relationshipLabel>
    <relationshipName>rel_1731658775092_end</relationshipName>
    <type>Lookup</type>
</CustomField>