force-app/main/default/objects/ssot__PartyProfileAddress__dlm/fields/ssot__rel_1731659067693_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659067693_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyProfileAddress_PartyProfileId_m_rel</label>
    <referenceTo>ssot__PartyProfile__dlm</referenceTo>
    <relationshipLabel>PartyProfileAddress_PartyProfileId_m_rel</relationshipLabel>
    <relationshipName>rel_1731659067693_end</relationshipName>
    <type>Lookup</type>
</CustomField>